# dotfiles

./: DOT_xsession  dircolors-data  emacs  git-diff-so-fancy.sh  hi2.el  keybindings  latex  screenrc  setup.sh  tmux.conf  wrapselect.py  xmobarrc
Emacs/: README  emacs  emacsclient.sh  keybindings  keybindings.el  latex.el  straight.el
emacsdir/: README  emacs  keybindings  show-whitespace-mode.el
gtk-3.0/: settings.ini
terminfo/s/: stterm  stterm-256color  stterm-meta  stterm-meta-256color
wrap/: brightness  fetchmail  keyboard-and-trackpad.sh  mutt  rxvt  rxvt-screen  rxvt-tmux  screen-connect-new  ssh_linode2  ssh_weber  suspend.sh  todo
xmodmaps/: caps  dvorak  qwerty
xmonad/: build  tom-xmonad.cabal  xmonad.hs
xrandr/: both_monitors  dualhead  dualhead_landscape  external_monitor  external_monitor_landscape  external_monitor_portrait  internal_monitor  landscape  monitor_ids
zsh/: zshrc
