name:                tom-xmonad
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  main-is:             xmonad.hs
  hs-source-dirs:      .
  build-depends:       base,
                       xmonad == 0.15,
                       xmonad-contrib == 0.16,
                       X11 == 1.9
  default-language:    Haskell2010
